ADMINUI-943 fix alignment on provision form

--- a/less/typeahead.less
+++ b/less/typeahead.less
@@ -1,3 +1,9 @@
+.twitter-typeahead+.help-inline {
+  margin-bottom: -5px;
+}
+.twitter-typeahead+.help-inline+.help-block {
+  margin-top: @baseLineHeight/2;
+}
 .typeahead-user {
   width: 240px;
   .login { font-weight: bold; }
